--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Обучение по Психологии Личности [ТОП-16, 2025 год], лучшие онлайн-курсы переподготовки и повышения квалификации по психологии личности + Бесплатные</title>
-    <meta name="description" content="Рейтинг самых популярных онлайн-курсов обучения по психологии личности: переподготовка и повышение квалификации для психологов в Москве и регионах РФ в 2025 году: регулярно обновляется > реальные отзывы студентов" />
+    <title>Обучение по Психологии Личности [ТОП-16, 2026 год], лучшие онлайн-курсы переподготовки и повышения квалификации по психологии личности + Бесплатные</title>
+    <meta name="description" content="Рейтинг самых популярных онлайн-курсов обучения по психологии личности: переподготовка и повышение квалификации для психологов в Москве и регионах РФ в 2026 году: регулярно обновляется > реальные отзывы студентов" />
 
-    <meta property="og:title" content="Обучение по Психологии Личности [ТОП-16, 2025 год], лучшие онлайн-курсы переподготовки и повышения квалификации по психологии личности + Бесплатные">
-    <meta property="og:description" content="Рейтинг самых популярных онлайн-курсов обучения по психологии личности: переподготовка и повышение квалификации для психологов в Москве и регионах РФ в 2025 году: регулярно обновляется > реальные отзывы студентов">
+    <meta property="og:title" content="Обучение по Психологии Личности [ТОП-16, 2026 год], лучшие онлайн-курсы переподготовки и повышения квалификации по психологии личности + Бесплатные">
+    <meta property="og:description" content="Рейтинг самых популярных онлайн-курсов обучения по психологии личности: переподготовка и повышение квалификации для психологов в Москве и регионах РФ в 2026 году: регулярно обновляется > реальные отзывы студентов">
     <meta property="og:image" content="1.jpg">
     <meta property="og:url" content="https://psihologiya-lichnosti-obuchenie.vercel.app/">
 
@@ -69,12 +69,12 @@ document.addEventListener("DOMContentLoaded", function () {
 
 
 <ol>
-<li><strong><a href="https://click.goleadcpa.ru/click?o=22&a=5&sub_id1=vercel-psy-lichnost&deep_link=https://mip.institute/professions/konsultirovanie/psiholog-konsultant">🏆 Психологическое консультирование</a> &ndash; Московский институт психологии</strong> (по промокоду kursy скидка 🎁 10%)</li>
+<li><strong><a href="https://go.redav.online/9c4c34a33e37efd0?erid=2VfnxvZhabB&m=1">🏆 Психологическое консультирование</a> &ndash; Московский институт психологии</strong> (по промокоду onlinekursy скидка 🎁 10%)</li>
 <li><strong><a href="https://go.redav.online/1af8bcdc3590e690?erid=LdtCK2DsV&m=1">🏆 Психологическое консультирование и психологическая диагностика личности</a> &ndash; НАДПО</strong> (по промокоду onlinekursy действует скидка 🎁 5%)</li>
 <li><strong><a href="https://go.redav.online/a58acbe90e0058d0?erid=LdtCKVRoV&m=1">🏆 Психология личности</a> &ndash; Психодемия</strong> (по промокоду OnlineKursy действует скидка 🎁 5000 руб)</li>
 <li><strong><a href="https://go.redav.online/6c6e742e770a2550?erid=LdtCKEyiP&m=1">Психолог-консультант</a> &ndash; Talentsy</strong> (по промокоду EDPART5 скидка 🎁 5%)</li>
 <li><strong><a href="https://view.edpstep.com/click?o=33&a=509&sub_id1=vercel-psy-lichn&deep_link=https://mipo.msk.ru/professions/Psychology/psihologiya-lichnosti">Психология личности</a> &ndash; МИПО</strong> (по промокоду onlinekursy действует скидка 🎁 10% )</li>
-<li><strong><a href="https://click.goleadcpa.ru/click?o=14&a=5&sub_id1=vercel-psy-lichnost&deep_link=https://moscow.mba/programs/profession/online/psiholog-konsultant-psihologicheskoe-konsultirovanie">Психолог-консультант. Психологическое консультирование</a> &ndash; Московская Бизнес Академия</strong> (по промокоду onlinekursy скидка 🎁 10%)</li>
+<li><strong><a href="https://go.redav.online/3ea3d0c1ce819950?erid=2VfnxwvSM5J&m=1">Психолог-консультант. Психологическое консультирование</a> &ndash; Московская Бизнес Академия</strong></li>
 <li><strong><a href="https://smart-inc.ru/prakticheskij-psikholog?gcao=35940&gcpc=f1c52">Практический психолог</a> &ndash; Институт Smart</strong></li>
 <li><strong><a href="https://view.edpstep.com/click?o=9&a=509&sub_id1=vercel-psy-lichnost&deep_link=https://ipo.msk.ru/professionalnaja-perepodgotovka/psihologija/psikhologiya-lichnosti/">Психология личности</a> &ndash; ИПО</strong></li>
 <li><strong><a href="https://view.edpstep.com/click?o=25&a=509&sub_id1=vercel-psy-lichnost&deep_link=https://mitm.institute/psiholog-konsultant--kurs">Психолог-консультант</a> &ndash; MITM</strong></li>
@@ -110,12 +110,12 @@ document.addEventListener("DOMContentLoaded", function () {
     </tr>
   </thead>
   <tbody>
-    <tr><td>🥇</td><td><a href="https://click.goleadcpa.ru/click?o=22&a=5&sub_id1=vercel-psy-lichnost&deep_link=https://mip.institute/professions/konsultirovanie/psiholog-konsultant">Психологическое консультирование – МИП</a></td><td>644 часа практики и супервизий, Центр карьеры, Балинтовские группы, участие в профессиональном сообществе</td><td><a href="https://click.goleadcpa.ru/click?o=22&a=5&sub_id1=vercel-psy-lichnost&deep_link=https://mip.institute/professions/konsultirovanie/psiholog-konsultant" class="btn">Перейти</a></td></tr>
+    <tr><td>🥇</td><td><a href="https://go.redav.online/9c4c34a33e37efd0?erid=2VfnxvZhabB&m=1">Психологическое консультирование – МИП</a></td><td>644 часа практики и супервизий, Центр карьеры, Балинтовские группы, участие в профессиональном сообществе</td><td><a href="https://go.redav.online/9c4c34a33e37efd0?erid=2VfnxvZhabB&m=1" class="btn">Перейти</a></td></tr>
     <tr><td>🥈</td><td><a href="https://go.redav.online/1af8bcdc3590e690?erid=LdtCK2DsV&m=1">Психологическое консультирование и психологическая диагностика личности – НАДПО</a></td><td>Завершение от 4 месяцев, доступ к ЛитРес и БиблиоКлубу, ТОП-3 по качеству дистанционного обучения</td><td><a href="https://go.redav.online/1af8bcdc3590e690?erid=LdtCK2DsV&m=1" class="btn">Перейти</a></td></tr>
     <tr><td>🥉</td><td><a href="https://go.redav.online/a58acbe90e0058d0?erid=LdtCKVRoV&m=1">Психология личности – Психодемия</a></td><td>2 диплома (магистр + проф.переподготовка), участие в научных проектах, преподаватели с публикациями в Nature</td><td><a href="https://go.redav.online/a58acbe90e0058d0?erid=LdtCKVRoV&m=1" class="btn">Перейти</a></td></tr>
     <tr><td>4</td><td><a href="https://go.redav.online/6c6e742e770a2550?erid=LdtCKEyiP&m=1">Психолог-консультант – Talentsy</a></td><td>2 диплома (РФ и MBA), 10 клиентов во время курса, практика с первого месяца</td><td><a href="https://go.redav.online/6c6e742e770a2550?erid=LdtCKEyiP&m=1" class="btn">Перейти</a></td></tr>
     <tr><td>5</td><td><a href="https://view.edpstep.com/click?o=33&a=509&sub_id1=vercel-psy-lichn&deep_link=https://mipo.msk.ru/professions/Psychology/psihologiya-lichnosti">Психология личности – МИПО</a></td><td>Индивидуальное менторское сопровождение, налоговый вычет, библиотека ЮРАЙТ</td><td><a href="https://view.edpstep.com/click?o=33&a=509&sub_id1=vercel-psy-lichn&deep_link=https://mipo.msk.ru/professions/Psychology/psihologiya-lichnosti" class="btn">Перейти</a></td></tr>
-    <tr><td>6</td><td><a href="https://click.goleadcpa.ru/click?o=14&a=5&sub_id1=vercel-psy-lichnost&deep_link=https://moscow.mba/programs/profession/online/psiholog-konsultant-psihologicheskoe-konsultirovanie">Психолог-консультант. Психологическое консультирование – Московская Бизнес Академия</a></td><td>Финальный проект, воркшопы, поддержка резюме и портфолио</td><td><a href="https://click.goleadcpa.ru/click?o=14&a=5&sub_id1=vercel-psy-lichnost&deep_link=https://moscow.mba/programs/profession/online/psiholog-konsultant-psihologicheskoe-konsultirovanie" class="btn">Перейти</a></td></tr>
+    <tr><td>6</td><td><a href="https://go.redav.online/3ea3d0c1ce819950?erid=2VfnxwvSM5J&m=1">Психолог-консультант. Психологическое консультирование – Московская Бизнес Академия</a></td><td>Финальный проект, воркшопы, поддержка резюме и портфолио</td><td><a href="https://go.redav.online/3ea3d0c1ce819950?erid=2VfnxwvSM5J&m=1" class="btn">Перейти</a></td></tr>
     <tr><td>7</td><td><a href="https://smart-inc.ru/prakticheskij-psikholog?gcao=35940&gcpc=f1c52">Практический психолог – Smart</a></td><td>1300 часов, живые сессии «вопрос-ответ», диплом РФ и MBA</td><td><a href="https://smart-inc.ru/prakticheskij-psikholog?gcao=35940&gcpc=f1c52" class="btn">Перейти</a></td></tr>
     <tr><td>8</td><td><a href="https://view.edpstep.com/click?o=9&a=509&sub_id1=vercel-psy-lichnost&deep_link=https://ipo.msk.ru/professionalnaja-perepodgotovka/psihologija/psikhologiya-lichnosti/">Психология личности – ИПО</a></td><td>Диплом гос.образца, кейсы, консультации, 620 часов, налоговый вычет</td><td><a href="https://view.edpstep.com/click?o=9&a=509&sub_id1=vercel-psy-lichnost&deep_link=https://ipo.msk.ru/professionalnaja-perepodgotovka/psihologija/psikhologiya-lichnosti/" class="btn">Перейти</a></td></tr>
     <tr><td>9</td><td><a href="https://view.edpstep.com/click?o=25&a=509&sub_id1=vercel-psy-lichnost&deep_link=https://mitm.institute/psiholog-konsultant--kurs">Психолог-консультант – МИТУ</a></td><td>Киноклубы, супервизии, поддержка Telegram-чата, диплом РФ</td><td><a href="https://view.edpstep.com/click?o=25&a=509&sub_id1=vercel-psy-lichnost&deep_link=https://mitm.institute/psiholog-konsultant--kurs" class="btn">Перейти</a></td></tr>
@@ -139,11 +139,11 @@ document.addEventListener("DOMContentLoaded", function () {
 
 
       <div class="course">
-<h2><a href="https://click.goleadcpa.ru/click?o=22&a=5&sub_id1=vercel-psy-lichnost&deep_link=https://mip.institute/professions/konsultirovanie/psiholog-konsultant">1. 🏆
+<h2><a href="https://go.redav.online/9c4c34a33e37efd0?erid=2VfnxvZhabB&m=1">1. 🏆
 Психологическое консультирование</a> – Московский институт психологии</h2>
 <p><img src="1.png" alt="Психологическое консультирование — Московский институт психологии" class="school-image"></p>
 <ul>
-<li><strong>✅ Официальный сайт:&nbsp;</strong><a href="https://click.goleadcpa.ru/click?o=22&a=5&sub_id1=vercel-psy-lichnost&deep_link=https://mip.institute/professions/konsultirovanie/psiholog-konsultant">mip.institute</a></li>
+<li><strong>✅ Официальный сайт:&nbsp;</strong><a href="https://go.redav.online/9c4c34a33e37efd0?erid=2VfnxvZhabB&m=1">mip.institute</a></li>
 <li><strong>💸 Цена обучения:</strong> от 180 000 ₽ в год (при оплате пакета «Лайт»).</li>
 <li><strong>💳 Рассрочка:</strong> от 15 000 ₽ в месяц, возможна беспроцентная оплата.</li>
 <li><strong>📚 Формат:</strong> дистанционное обучение, видеолекции, тексты, практические занятия, супервизии, интервизии, тесты, задания.</li>
@@ -188,7 +188,7 @@ document.addEventListener("DOMContentLoaded", function () {
 <h3>Отзывы учеников:</h3>
 <p>Слушатели отмечают большое количество практики, участие в профессиональных группах, удобный дистанционный формат. Среди плюсов также выделяют поддержку наставников, живое общение с преподавателями и возможность сразу применять знания в психологической практике.</p>
 
-<a href="https://click.goleadcpa.ru/click?o=22&a=5&sub_id1=vercel-psy-lichnost&deep_link=https://mip.institute/professions/konsultirovanie/psiholog-konsultant" class="btn">Перейти на официальный сайт курса</a>
+<a href="https://go.redav.online/9c4c34a33e37efd0?erid=2VfnxvZhabB&m=1" class="btn">Перейти на официальный сайт курса</a>
 
 </div>
 <div class="course">
@@ -282,7 +282,7 @@ document.addEventListener("DOMContentLoaded", function () {
   <li>Включение практических заданий и семинаров в образовательный процесс</li>
   <li>Работа с реальными кейсами в рамках психологической практики</li>
   <li>Возможность применять знания в HR, маркетинге, образовании и других смежных сферах</li>
-  <li>Образование соответствует профессиональным и образовательным стандартам 2025 года</li>
+  <li>Образование соответствует профессиональным и образовательным стандартам 2026 года</li>
   <li>Поддержка студентов на всех этапах прохождения обучения</li>
 </ul>
 
@@ -407,10 +407,10 @@ document.addEventListener("DOMContentLoaded", function () {
 </div>
 
 <div class="course">
-<h2><a href="https://click.goleadcpa.ru/click?o=14&a=5&sub_id1=vercel-psy-lichnost&deep_link=https://moscow.mba/programs/profession/online/psiholog-konsultant-psihologicheskoe-konsultirovanie">6. Психолог-консультант. Психологическое консультирование</a> – Московская Бизнес Академия</h2>
+<h2><a href="https://go.redav.online/3ea3d0c1ce819950?erid=2VfnxwvSM5J&m=1">6. Психолог-консультант. Психологическое консультирование</a> – Московская Бизнес Академия</h2>
 <p><img src="6.png" alt="Психолог-консультант. Психологическое консультирование — Московская Бизнес Академия" class="school-image"></p>
 <ul>
-<li><strong>✅ Официальный сайт:&nbsp;</strong><a href="https://click.goleadcpa.ru/click?o=14&a=5&sub_id1=vercel-psy-lichnost&deep_link=https://moscow.mba/programs/profession/online/psiholog-konsultant-psihologicheskoe-konsultirovanie">moscow.mba</a></li>
+<li><strong>✅ Официальный сайт:&nbsp;</strong><a href="https://go.redav.online/3ea3d0c1ce819950?erid=2VfnxwvSM5J&m=1">moscow.mba</a></li>
 <li><strong>💸 Цена:</strong> от 116 496 ₽ со скидкой 50% </li>
 <li><strong>💳 Рассрочка:</strong> от 4 854 ₽/мес на 24 месяца, первый платёж — через месяц</li>
 <li><strong>📚 Формат:</strong> дистанционное обучение, видеолекции, тесты, практические задания, воркшопы, финальный проект</li>
@@ -446,7 +446,7 @@ document.addEventListener("DOMContentLoaded", function () {
 <ul>
 <li>Обучение проходит в удобном дистанционном формате</li>
 <li>Доступ к материалам из любой точки мира</li>
-<li>Обновленная программа 2025 года</li>
+<li>Обновленная программа 2026 года</li>
 <li>Практические задания, приближенные к реальным кейсам</li>
 <li>Возможность совмещать учебу с работой</li>
 <li>Диплом с внесением в ФРДО</li>
@@ -457,7 +457,7 @@ document.addEventListener("DOMContentLoaded", function () {
 <h3>Отзывы учеников:</h3>
 <p>Студенты часто отмечают высокий уровень преподавателей и простоту подачи материала. Среди плюсов — насыщенная практика, доступ к лекциям в любое время и помощь с трудоустройством. Многие прошли переподготовку и уже работают в психологических центрах и образовательных учреждениях.</p>
 
-<a href="https://click.goleadcpa.ru/click?o=14&a=5&sub_id1=vercel-psy-lichnost&deep_link=https://moscow.mba/programs/profession/online/psiholog-konsultant-psihologicheskoe-konsultirovanie" class="btn">Перейти на официальный сайт курса</a>
+<a href="https://go.redav.online/3ea3d0c1ce819950?erid=2VfnxwvSM5J&m=1" class="btn">Перейти на официальный сайт курса</a>
 
 </div>
 <div class="course">
@@ -526,7 +526,7 @@ document.addEventListener("DOMContentLoaded", function () {
 </ul>
 
 <h3>Особенности:</h3>
-<p>Курс направлен на формирование профессиональных навыков в области практической психологии. В дистанционном формате студенты проходят обучение в гибком графике, совмещая изучение теоретических знаний и отработку практических навыков. Программа включает регулярные онлайн-встречи с опытными менторами, участие в кейс-методах и тренингах по психологическому консультированию. После окончания обучения выдается диплом, соответствующий государственным стандартам, с правом практиковать в профессиональной сфере. Возможность проходить обучение из любого региона делает курс удобным для слушателей с разным графиком. Программа актуальна в 2025 году, когда востребованность специалистов в сфере психологии личности продолжает расти.</p>
+<p>Курс направлен на формирование профессиональных навыков в области практической психологии. В дистанционном формате студенты проходят обучение в гибком графике, совмещая изучение теоретических знаний и отработку практических навыков. Программа включает регулярные онлайн-встречи с опытными менторами, участие в кейс-методах и тренингах по психологическому консультированию. После окончания обучения выдается диплом, соответствующий государственным стандартам, с правом практиковать в профессиональной сфере. Возможность проходить обучение из любого региона делает курс удобным для слушателей с разным графиком. Программа актуальна в 2026 году, когда востребованность специалистов в сфере психологии личности продолжает расти.</p>
 
 <h3>Чему учатся студенты:</h3>
 <ul>
@@ -1052,7 +1052,7 @@ document.addEventListener("DOMContentLoaded", function () {
     </main>
 
 <footer id="footer">
-        <p>&copy; 2025 Подборка онлайн-курсов обучения по психологии личности. Все права защищены.</p>
+        <p>&copy; 2026 Подборка онлайн-курсов обучения по психологии личности. Все права защищены.</p>
          <p>По вопросам обращаться: <a href="mailto:on-line-kursy@yandex.ru">on-line-kursy@yandex.ru</a></p> <p>Интернет-сайт носит информационный характер и ни при каких условиях не является публичной офертой, которая определяется положениями статьи 437 Гражданского кодекса РФ. Информация о программах курсов и иных условий, указанных на сайте, может быть изменена организацией предоставляющей услуги обучения в одностороннем порядке. Скриншоты с сайтов курсов могут отличаться от оригиналов. Информация по ценам, может отличаться от фактической, к моменту просмотра рейтинга.</p> 
 
 
